tests/baselines/reference/functionOverloads14.errors.txt
==== tests/cases/compiler/functionOverloads14.ts (1 errors) ====
    function foo():{a:number;}
    function foo():{a:string;}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! functionOverloads14.ts(2,1): error TS2175: Overloads cannot differ only by return type.
    function foo():{a:any;} { return {a:1} }
    